[feature/correctifs] animation wrap-description

--- a/src/app/components/videos/videos.component.scss
+++ b/src/app/components/videos/videos.component.scss
@@ -77,11 +77,28 @@
     }
 }
 #wrap-description.displayed{
-    right:0;
+    animation: show_description .5s linear;
+    animation-fill-mode:forwards;
+}
+#wrap-description.cached{
+    animation: hide_description .5s linear;
+    animation-fill-mode:forwards;
 }
 
 @keyframes rotate_gear {
     100% {  transform: rotate(50turn);  }
+}
+
+@keyframes show_description {
+    0% { right:-200px; }
+    150% { right:-100px; }
+    100% {  right:0px  }
+}
+
+@keyframes hide_description {
+    0% { right:0px; }
+    150% { right:-100px; }
+    100% {  right:-200px  }
 }
 
 @media (max-width:767px) {
